force-app/main/default/objects/InventoryResults__c/InventoryResults__c.object-meta.xml
<CustomObject>
    <label>棚卸結果</label>
    <nameField>
        <displayFormat>IR-{YYYY}{MM}-{0000}</displayFormat>
        <label>棚卸結果No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>