force-app/main/default/objects/InventoryResults__c/fields/AssetManagementNumber__c.field-meta.xml
<CustomField>
    <fullName>AssetManagementNumber__c</fullName>
    <formula>Assets__r.AssetManagementNumber__c</formula>
    <label>資産管理番号</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>