force-app/main/default/objects/InventoryResults__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>資産</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Assets__c.InventoryTarget__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assets__c</referenceTo>
    <relationshipLabel>棚卸結果</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>