force-app/main/default/objects/InventoryResults__c/fields/BarcodeNumber__c.field-meta.xml
<CustomField>
    <fullName>BarcodeNumber__c</fullName>
    <formula>Assets__r.BarcodeNumber__c</formula>
    <label>バーコード番号</label>
    <type>Text</type>
</CustomField>