force-app/main/default/objects/InventoryResults__c/fields/Confirmer__c.field-meta.xml
<CustomField>
    <fullName>Confirmer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>確認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InventoryResultsUser</relationshipName>
    <type>Lookup</type>
</CustomField>