force-app/main/default/objects/InventoryResults__c/fields/DateConfirmed__c.field-meta.xml
<CustomField>
    <fullName>DateConfirmed__c</fullName>
    <label>確認日</label>
    <type>Date</type>
</CustomField>