force-app/main/default/objects/InventoryResults__c/fields/InventoryYear__c.field-meta.xml
<CustomField>
    <fullName>InventoryYear__c</fullName>
    <label>棚卸年度</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>棚卸結果</relationshipLabel>
    <relationshipName>InventoryYear</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>