force-app/main/default/objects/InventoryResults__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>メモ</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>