force-app/main/default/objects/InventoryResults__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>TEXT(InventoryYear__r.Period__c)</formula>
    <label>上期/下期</label>
    <type>Text</type>
</CustomField>