force-app/main/default/objects/InventoryResults__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>使用者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResultUser</relationshipName>
    <type>Lookup</type>
</CustomField>