force-app/main/default/objects/InventoryResults__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Assets__c</columns>
    <columns>AssetManagementNumber__c</columns>
    <columns>BarcodeNumber__c</columns>
    <columns>Confirmer__c</columns>
    <columns>DateConfirmed__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>